# Program

./: CalculateDate.py
Boa/: alphabet.b  bottles.b  calculator.b  command boa.txt  copyInput.b  counter.b  factoriel.b  fibonacci.b  fonction.b  helloworld.b  helloworld_ascii.b  loadFile.b  out.bdata  oxo.b  saveFile.b  sqrt.b  stack.b  truthmachine.b  wait.b
Boa/objectprogramming/: func.bFunc  gfunc.bFunc  main.b  main.def  myobj.bObj  stack.bFunc
Boa/testFileImport/: func.b  main.b  main.def
COURS LOUANN/+ou-/: main.py
COURS LOUANN/TruthMachine/: main.py
COURS LOUANN/calculatrice/: main.py
Graphical Interface/: main.py
IFSCL_python/: main.py  terminal.py
IFSCL_python/battle/: battle.py  lg.py
IFSCL_python/classe/: character.py
MyMath/: main.py
MyMath/basic/: number.py  op.py
MyMath/ext/: geo.py
OS/src/: main.asm
Python/: CalculateDate.py  opmath.py  snake.py
Python/COURS LOUANN/: plan
Python/IFSCL_python/: code erreur.txt
Python/MyFileFormat/: aes.py  main.py  (+6 more)
Python/packaging_tutorial/: pyproject.toml
PythonModules/: LambdaFunction.py  ScriptManagment.py
Slime Adventure/: db.py  game.py  main.py  map.py  player.py
Terminal/: boa.py  terminal.py
hash/: decode.py  encode.py  function.py  h1.py  main2.py  read_ci.py
latinAnalyser-main/: README.md  conjonction.py  demonstratif.py  main.py  preposition.py  texte  vocLatin.db
ordi_8bit/: main.py  ram.ram  rom.rom
pendu/: dico.py  main.py
subnautica/: crafter.py  data.py  function.py
test python/: game.py  main.py  map.py  player.py  vector.py
tr de pascale/: tr.txt
(+202 files in other folders)
