[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exemple_package_heruda"
version = "0.0.1"
authors = [
    { name="heruda", email="author@exemple.com"},
]
description = "A small exemple package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"